[tool.poetry]
name = "scholarseek"
version = "0.1.0"
description = ""
authors = ["ChiragAgg5k <chiragaggarwal5k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
scholarly = "^1.7.11"
pandas = "^2.2.2"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
transformers = "^4.44.2"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
